# pypsrp

./: .gitignore  CHANGELOG.md  New-PSSessionLogger.ps1  azure-pipelines.yml  jordan.py  pyproject.toml
docs/: conf.py
psrp/: _compat.py  _runspace.py  connection_info.py  exceptions.py  host.py  winrs.py  wsman.py
psrp/_http/: connection.py
psrp/_wsman/: __init__.py  _async.py  _auth.py  _backends.py  _bytestreams.py  _connection.py  _encryption.py  _transport.py  _utils.py
psrp/dotnet/: complex_types.py  crypto.py  primitive_types.py  ps_base.py  psrp_messages.py  serializer.py
psrp/io/: process.py  ssh.py  wsman.py
psrp/protocol/: powershell.py  powershell_events.py  winrs.py  wsman.py
pypsrp/: _utils.py  client.py  messages.py  powershell.py
tests/: conftest.py  test_client.py  test_complex_objects.py  test_encryption.py  test_exceptions.py  test_host.py  test_integration.py  test_negotiate.py  test_powershell.py  test_serializer.py  test_shell.py  test_utils.py  test_wsman.py
tests/psrp/dotnet/: test_complex_types.py  test_primitive_types.py  test_ps_base.py  test_psrp_messages.py  test_serializer.py
tests/psrp/protocol/: test_powershell.py
