[tool.poetry]
name = "pypsrp"
version = "1.0.0"
description = "PowerShell Remoting Protocol and WinRM for Python"
authors = ["Jordan Borean <jborean93@gmail.com>"]
license = "MIT"
keywords = ["winrm", "psrp", "winrs", "windows", "powershell"]
readme = "README.md"
homepage = "https://github.com/jborean93/pypsrp"
include = [
    "CHANGELOG.md",
]

[tool.poetry.dependencies]
python = "^3.6.2"
cryptography = "*"
pyspnego = "< 1.0.0"
httpx = "^0.18.2"
httpcore = "^0.13.6"
async_generator = {version = "^1.10", python = "< 3.7"}
psrpcore = {git = "https://github.com/jborean93/psrpcore.git", rev = "main"}

# kerberos
gssapi = {version = "^1.5.0", optional = true, markers = "sys_platform!='win32'"}

# socks
async-timeout = {version = "^3.0.1", optional = true}
python-socks = {version = "^1.2.4", optional = true}

# ssh
asyncssh = {version = "^2.7.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pycodestyle = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
PyYAML = "*"
xmldiff = "*"
tox = "*"

[tool.poetry.extras]
kerberos = ["gssapi"]
socks = ["async-timeout", "python-socks"]
ssh = ["asyncssh"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint,py36,py37,py38,py39
skip_missing_interpreters = true
isolated_build = True

[testenv]
whitelist_externals =
    poetry

commands_pre =
    poetry install

commands =
    poetry run python -m pytest -v --cov pypsrp --cov psrp --cov-report term-missing

passenv =
    PSRP_*

[testenv:lint]
commands =
    poetry run python -m black --check .
    poetry run python -m pycodestyle pypsrp --verbose --show-source --statistics --max-line-length 119
"""

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pypsrp
)/
'''
